fix overflow issue on routes when height is minimal

--- a/src/app/pages/dashboard/clients/clients.component.scss
+++ b/src/app/pages/dashboard/clients/clients.component.scss
@@ -32,6 +32,10 @@ p-progressSpinner {
     margin-bottom: 1rem;
     line-height: 1.7rem;
   }
+
+  @media screen and (max-height: 555px) {
+    height: auto;
+  }
 }
 
 .clients {
