--- a/src/app/pages/dashboard/team-members/team-members.component.scss
+++ b/src/app/pages/dashboard/team-members/team-members.component.scss
@@ -27,4 +27,8 @@
     margin-bottom: 1rem;
     line-height: 1.7rem;
   }
+
+  @media screen and (max-height: 555px) {
+    height: auto;
+  }
 }
